2004-11-01  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: Improve lotus 123 files magic pattern. Patch
	by Filip Van Raemdonck <mechanix@debian.org>, fix #1276.

Mon Nov  1 14:49:57 2004  Jonathan Blandford  <jrb@redhat.com>

	* MAINTAINERS: New file to highlight that I'm no longer the
	maintainer.

Mon Nov  1 14:47:02 2004  Jonathan Blandford  <jrb@redhat.com>

	* autogen.sh: Patch from Thomas Fitzsimmons <fitzsim@redhat.com>
	to add support for building modules in separate build directories

2004-10-20  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add magic for audio/x-scpls

2004-10-07  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added "eo" (Esperanto) to ALL_LINGUAS.

2004-09-29  Christopher Aillon  <caillon@redhat.com>

       * freedesktop.org.xml.in: Add application/vnd.mozilla.xul+xml and
       make MathML inherit from XML.

2004-09-13  Christophe Fergeau  <teuf@gnome.org>

	* configure.in: Added "ms" (Malay) to ALL_LINGUAS

2004-09-10  Christophe Fergeau  <teuf@gnome.org>

	* configure.in: Added "ja" (Japanese) to ALL_LINGUAS

2004-09-10  Christophe Fergeau  <teuf@gnome.org>

	* configure.in: Added "pl" (Polish) to ALL_LINGUAS.

2004-09-10  Nico R. <n-roeser@gmx.net>

	* configure.in: fix substitution of ALL_CFLAGS and ALL_LIBS

2004-09-08  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added "es" (Spanish) to ALL_LINGUAS.

2004-09-06  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added "pt" (Portuguese) to ALL_LINGUAS.

	* configure.in: Added "uk" (Ukrainian) to ALL_LINGUAS.

2004-09-04  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added "pt_BR" (Brazilian Portuguese) to ALL_LINGUAS.

	* configure.in: Added "eu" (Basque) to ALL_LINGUAS.

2004-09-03  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added "bg" (Bulgarian) to ALL_LINGUAS.

2004-09-01  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added "sq" (Albanian) to ALL_LINGUAS.

2004-08-31  Miloslav Trmac  <mitr@volny.cz>
