@@ -1,5 +1,10 @@
 2004-11-01  Christophe Fergeau  <teuf@gnome.org>
 
+	* freedesktop.org.xml.in: Added application/x-par2, patch by dob 
+	<abusenospam@free.fr>, fixes #750
+
+2004-11-01  Christophe Fergeau  <teuf@gnome.org>
+
 	* freedesktop.org.xml.in: Improve lotus 123 files magic pattern. Patch
 	by Filip Van Raemdonck <mechanix@debian.org>, fix #1276.
 
